# arm_gazebo

./: CMakeLists.txt  README.md  package.xml
config/: ARM0.txt  ARM1.txt  ARMd.txt  robot_camera.rviz  view.rviz
docker/: Dockerfile  build.bash  dc_nvidia.yml  dc_vnc.yml  dc_x11.yml  run.bash
launch/: arm_panda.launch  arm_ur5.launch  panda_camera.urdf.xacro  panda_camera_grasp.urdf.xacro  ur5e_2f85_control.launch.xml  ur5e_2f85_controllers.yaml
launch/urdf/: panda_camera.urdf.xacro  ur5e_2f85.xacro  ur5e_2f85_macro.xacro  ur5e_default_kinematics.yaml  ur5e_macro.xacro
models/009_gelatin_box/: gelatin_box.sdf
models/010_potted_meat_can/: potted_meat_can.sdf
models/040_large_marker/: large_marker.sdf
models/binBlue/: .MATLABDriveTag  model.config  model.sdf
models/binGreen/: .MATLABDriveTag  model.config  model.sdf
models/blueBlock/: blueBlock.sdf  model.config
models/blueBottle/: .MATLABDriveTag  model.config  model.sdf
models/cardboard_box/: model.config  model.sdf
models/greenBlock/: greenBlock.sdf  model.config
models/greenCan/: .MATLABDriveTag  model.config  model.sdf
models/pouch/: model.config  pouch.sdf
models/purpleBlock/: model.config  purpleBlock.sdf
models/redBlock/: model.config  redBlock.sdf
models/redBottle/: .MATLABDriveTag  model.config  model.sdf
models/redCan/: .MATLABDriveTag  model.config  model.sdf
models/scale/: model.config  scale.sdf
scripts/: gazebo_models.py  gazebo_objects.py  list_models.py  list_objects.py  reset_world.bash  send_joints_ur5.py  utils.py
worlds/: arm_empty.world
(+32 files in other folders)
